fix(ux): full-bleed chat container as default
Refs: RW-857

--- a/components/chat-popup/chat-popup.css
+++ b/components/chat-popup/chat-popup.css
@@ -1,21 +1,17 @@
 .ocha-ai-chat-chat-popup {
   position: fixed;
   z-index: 10000;
-  top: 24px;
-  right: 24px;
-  width: 30vw;
-  height: calc(100vh - 48px);
-  border: 2px solid black;
-  border-radius: 9px;
+  bottom: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
   background: white;
-  box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.2);
 }
 
 .ocha-ai-chat-chat-popup__iframe {
   width: 100%;
   height: 100%;
   border: none;
-  border-radius: 6px;
 }
 
 .data-ocha-ai-chat-chat-popup__button {
